--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,66 @@
 </head>
 
 <body>
+  <div class="modal">
+    <div class="modal-window">
+      <div class="modal-wrapper">
+        <img class="modal_img" src="./assets/img/menu-deserts/dessert-1.png" alt="Marble cheesecake">
+        <div class="modal-content">
+          <h3 class="modal_title">Marble cheesecake</h3>
+          <div class="modal_descr">Philadelphia cheese with lemon zest on a light sponge cake and red currant jam</div>
+          <div class="modal_size">
+
+            <div class="modal_size-btn active" data-size="0">
+              <div class="modal_size-btn_title">S</div>
+              <div class="modal_size-btn_descr">50 g</div>
+            </div>
+
+            <div class="modal_size-btn" data-size="0.5">
+              <div class="modal_size-btn_title">M</div>
+              <div class="tab-button_descr">100 g</div>
+            </div>
+
+            <div class="modal_size-btn" data-size="1">
+              <div class="modal_size-btn_title">L</div>
+              <div class="modal_size-btn_descr">200 g</div>
+            </div>
+
+          </div>
+          <div class="modal_add">
+
+            <div class="modal_add-btn active" data-size="0">
+              <div class="modal_size-btn_title">S</div>
+              <div class="modal_size-btn_descr">50 g</div>
+            </div>
+
+            <div class="modal_size-btn" data-size="0.5">
+              <div class="modal_size-btn_title">M</div>
+              <div class="tab-button_descr">100 g</div>
+            </div>
+
+            <div class="modal_size-btn" data-size="1">
+              <div class="modal_size-btn_title">L</div>
+              <div class="tab-button_descr">200 g</div>
+            </div>
+
+          </div>
+          <div class="modal-content_additional">Inoculations: <span>none</span></div>
+          <div class="modal-content_additional">Diseasese: <span>none</span></div>
+          <div class="modal-content_additional">Parasites: <span>none</span></div>
+          <div class="modal-close"><svg width="52" height="52" viewbox="0 0 52 52" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <rect x="1" y="1" width="50" height="50" rx="25" stroke="#F1CDB3" stroke-width="2" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M27.4262 26L31.7046 21.7216C32.0985 21.3277 32.0985 20.6892 31.7046 20.2954C31.3108 19.9016 30.6723 19.9016 30.2785 20.2954L26 24.5739L21.7215 20.2954C21.3276 19.9015 20.6892 19.9015 20.2953 20.2954C19.9016 20.6892 19.9016 21.3277 20.2953 21.7215L24.5738 26L20.2953 30.2785C19.9016 30.6723 19.9016 31.3108 20.2953 31.7046C20.6892 32.0985 21.3276 32.0985 21.7215 31.7046L26 27.4261L30.2785 31.7046C30.6723 32.0985 31.3108 32.0985 31.7046 31.7046C32.0985 31.3108 32.0985 30.6723 31.7046 30.2785L27.4262 26Z"
+                fill="#292929" />
+            </svg></div>
+
+        </div>
+      </div>
+    </div>
+
+
+  </div>
   <div class="container">
 
     <header class="header">
