--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
             <div class="modal_size_descr">Size</div>
             <div class="tab_buttons modal_size-btns">
 
-              <div class="modal_size-btn tab-button active" data-size="0">
+              <div class="modal_size-btn tab-button  base-active active" data-size="0">
                 <div class="tab-button_img">S</div>
                 <div class="tab-button_descr modal_size-dynamic">50 g</div>
               </div>
@@ -41,7 +41,7 @@
                 <div class="tab-button_descr modal_size-dynamic">100 g</div>
               </div>
 
-              <div class="modal_size-btn tab-button" data-size="2">
+              <div class="modal_size-btn tab-button" data-size="1">
                 <div class="tab-button_img">
                   L
                 </div>
